# adore_math

./: CMakeLists.txt  README.md  THIRD-PARTY.md  package.xml  requirements.cmake  requirements.system
include/adore_math/: PiecewisePolynomial.h  angles.h  curvature.hpp  distance.h  eigen.h  fast_trig.h  point.h  polygon.h  pose.h  shape.h  spline.h
src/: PiecewisePolynomial.cpp  angles.cpp  curvature.cpp  distance.cpp  eigen.cpp
test/: CMakeLists.txt  angle_test.cpp  distance_test.cpp  polynomian_test.cpp  spline_test.cpp
